--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,7 @@
     "eslint": "^5.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "^3.0.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
